--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bull": "^3.16.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "express-session": "^1.17.0",
